--- a/package.json
+++ b/package.json
@@ -10,20 +10,29 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@mui/material": "^6.1.9",
+    "@mui/x-date-pickers": "^7.22.3",
     "@prisma/client": "^5.22.0",
     "@types/date-fns": "^2.6.3",
     "axios": "^1.7.8",
     "bcrypt": "^5.1.1",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
+    "dayjs": "^1.11.13",
     "jsonwebtoken": "^9.0.2",
     "next": "15.0.3",
     "next-auth": "^4.24.10",
     "pg": "^8.13.1",
     "prisma": "^5.22.0",
     "react": "^18.2.0",
+    "react-data-table-component": "^7.6.2",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.53.2"
+    "react-hook-form": "^7.53.2",
+    "react-toastify": "^10.0.6",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -31,6 +40,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/styled-components": "^5.1.34",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
